# GrantAutomation

GrantAutomation/: final_grant_report.md
GrantAutomation/grant_automation/: README.md  final_grant_report.md  pyproject.toml
GrantAutomation/grant_automation/src/grant_automation/: crew.py  main.py
GrantAutomation/grant_automation/src/grant_automation/config/: agents.yaml  tasks.yaml
GrantAutomation/grant_automation/src/grant_automation/tools/: custom_tool.py
