[project]
name = "grant_automation"
version = "0.1.0"
description = "grant_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
grant_automation = "grant_automation.main:run"
run_crew = "grant_automation.main:run"
train = "grant_automation.main:train"
replay = "grant_automation.main:replay"
test = "grant_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
